# good-calculator

./: .gitignore  FunctionMap.kt  MainActivity.kt  README.md  paper.md  paper_readme_backup.md
ada/: chain_verification.adb  chain_verification.ads  test_chain_verification  test_chain_verification.adb
app/: build.gradle.kts
app/src/main/assets/models/: arithmetic_mlp.tflite
app/src/main/java/edu/singaporetech/inf2007quiz01/: BlockchainBridge.kt  BlockchainVerifier.kt  (+9 more)
basic/: calbot_verification.bas
dotnet/: CalBotDotNet.slnx
dotnet/CalBot.CSharp/: ArithmeticVerifier.cs
dotnet/CalBot.FSharp/: ArithmeticVerifier.fs  CalBot.FSharp.fsproj
dotnet/CalBot.TestRunner/: CalBot.TestRunner.csproj  Program.cs
dotnet/CalBot.VBNet/: ArithmeticVerifier.vb
fortran/: calbot_raytracer.mod  jni_wrapper.c  raytracer.f90
freertos/: rtos_calc.c
freertos/config/: FreeRTOSConfig.h
ml/: convert_to_tflite.py  train_arithmetic_mlp.py
ml/weights/: weights.json
scripts/: build-cursed.sh
test/: Readme.txt  test.bat  test.sh
wasm/add-go/: Makefile  go.mod  main.go
wasm/div-rust/: Cargo.toml  Makefile
wasm/div-rust/src/: lib.rs
wasm/ledger-cobol/: Makefile  README.md  chain_verifier_generator.cob  chain_verifier_generator_v2  genesis_generator  genesis_generator.cob  ledger.cob  test_ledger.c  test_standalone  test_standalone.cob
wasm/mul-zig/: Makefile  mul.zig
wasm/sub-c/: Makefile  sub.c
zig/: build.zig  libc-arm64.conf  libc-x86_64.conf
zig/src/: blockchain.zig  evaluator.zig  fibonacci.zig  jni_exports.zig  pqc_signer.zig  wasm_dispatch.zig
(+31 files in other folders)
